# lm-anki-cards-creator

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
prompts/: prompt.json
src/: anki_utils.py  audio_utils.py  main.py  nlp_utils.py  streamlit_app.py  streamlit_utils.py
